# imgui_shadcn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: login_screen.cpp  login_screen.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_widgets.cpp
json/: json.hpp
shadcn/: CMakeLists.txt
shadcn/include/shadcn/: shadcn.hpp
shadcn/include/shadcn/color/: color.hpp
shadcn/include/shadcn/elem/: button.hpp  card.hpp  checkbox.hpp  elem.hpp  input_text.hpp  slider.hpp  text.hpp  toggle.hpp
shadcn/include/shadcn/fonts/: fonts.hpp
shadcn/include/shadcn/fonts/geist/: geist_400.hpp  geist_500.hpp  geist_600.hpp  geist_700.hpp
shadcn/include/shadcn/fonts/lucide/: generate_header.py  lucide_defines.hpp
shadcn/include/shadcn/styles/: styles.hpp
shadcn/src/: shadcn.cpp
shadcn/src/elem/: button.cpp  card.cpp  checkbox.cpp  elem.cpp  input_text.cpp  slider.cpp  text.cpp  toggle.cpp
shadcn/src/fonts/: fonts.cpp
shadcn/src/styles/: styles.cpp
